--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <span class="icons">
                             <img src="imgs/perfil.png">
                         </span>
-                        <p class="texto">Perfil</p>
+                        <p class="texto">Configurações</p>
                         <span class="circulo"></span>
                     </a>
                 </li>
